[gd_scene load_steps=38 format=2]

[ext_resource path="res://scenes/entities/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/EnemyInterSprites.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/sprites/enemy/inter/idle/needle/enemy_inter_idle_needle0004.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/enemy/inter/idle/needle/enemy_inter_idle_needle0005.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0014.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0013.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0012.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0009.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0010.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0008.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0011.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0029.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0030.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0015.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0025.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0026.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0022.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0024.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0017.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0027.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0032.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0020.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0021.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0016.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0023.png" type="Texture" id=25]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0031.png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0018.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0019.png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/enemy/inter/attack/enemy_inter_attack0028.png" type="Texture" id=29]
[ext_resource path="res://scenes/entities/EnemyInterNeedle.gd" type="Script" id=30]
[ext_resource path="res://resources/EnemyDetectionBox.tres" type="Shape2D" id=31]
[ext_resource path="res://assets/sounds/enemy_inter_shoot.mp3" type="AudioStream" id=32]
[ext_resource path="res://scenes/entities/EnemyInter.gd" type="Script" id=33]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform vec4 color: hint_color;
uniform float flash_state: hint_range(0,1) = 0;

void fragment() {
	vec4 pixel_color = texture(TEXTURE, UV);
	COLOR = mix(pixel_color, color, flash_state);
	COLOR.a *= pixel_color.a;
}"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/flash_state = 0.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 29 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 26 ), ExtResource( 21 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 83.0439
height = 0.0

[node name="EnemyInter" instance=ExtResource( 1 )]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 33 )

[node name="Sprite" parent="Animation" index="1"]
material = SubResource( 4 )
frames = ExtResource( 2 )
frame = 0

[node name="Needle" type="AnimatedSprite" parent="Animation" index="2"]
frames = SubResource( 5 )
animation = "idle"
frame = 1
playing = true
script = ExtResource( 30 )

[node name="Timer" type="Timer" parent="Animation/Needle" index="0"]
wait_time = 0.5

[node name="AudioShoot" type="AudioStreamPlayer2D" parent="Animation/Needle" index="1"]
stream = ExtResource( 32 )
volume_db = -8.0

[node name="Area2D" parent="." index="1" groups=["enemy_inter"]]

[node name="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 3.3712, -3.74577 )
shape = SubResource( 6 )

[node name="Detection" type="Area2D" parent="." index="3"]

[node name="Shape" type="CollisionShape2D" parent="Detection" index="0"]
shape = ExtResource( 31 )

[connection signal="dying" from="." to="Animation/Needle" method="_on_EnemyInter_dying"]
[connection signal="frame_changed" from="Animation/Needle" to="Animation/Needle" method="_on_Needle_frame_changed"]
[connection signal="timeout" from="Animation/Needle/Timer" to="Animation/Needle" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Detection" to="Animation/Needle" method="_on_Detection_area_entered"]
[connection signal="area_exited" from="Detection" to="Animation/Needle" method="_on_Detection_area_exited"]
